--- a/client/package.json
+++ b/client/package.json
@@ -3,10 +3,14 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "axios": "^1.6.2",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "chart.js": "^4.4.0",
+    "cheerio": "^1.0.0",
     "css-select": "^5.1.0",
     "leaflet": "^1.9.4",
     "nth-check": "^2.1.1",
@@ -15,6 +19,7 @@
     "react-bootstrap": "^2.10.9",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.20.0",
     "react-scripts": "^5.0.1",
