--- a/client/package.json
+++ b/client/package.json
@@ -20,10 +20,12 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
+    "react-lazy-load-image-component": "^1.6.3",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.20.0",
     "react-scripts": "^5.0.1",
     "resolve-url-loader": "^5.0.0",
+    "sharp": "^0.33.5",
     "socket.io-client": "^4.7.2",
     "svgo": "^3.3.2"
   },
